--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,8 @@
-# Web Framework
-Flask>=2.0
-gunicorn>=20.0
-
-# Data Processing
-openpyxl>=3.0
-requests>=2.0
-
-# NLP & Text Processing
-python-dateutil>=2.8.2
-
-# Scheduling & Background Tasks
-schedule>=1.1.9
-
-# PDF Generation
-weasyprint>=54.0
-reportlab>=3.6.0
-
-# Environment Configuration
-python-dotenv>=0.19.0
-
-# Testing
-pytest>=7.0
-pytest-cov>=4.0
-
-# Utilities
-Pillow>=9.0
-cryptography>=40.0
+Flask==2.3.3
+Flask-SQLAlchemy==3.0.5
+python-dotenv==1.0.0
+requests==2.31.0
+psycopg2-binary==2.9.7
+Werkzeug==2.3.7
+gunicorn==21.2.0
+PyJWT==2.8.1
