--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-Flask==2.3.3
-Flask-SQLAlchemy==3.0.5
-python-dotenv==1.0.0
-requests==2.31.0
-psycopg2-binary==2.9.7
-Werkzeug==2.3.7
-gunicorn==21.2.0
-PyJWT==2.8.1
+Flask
+Flask-SQLAlchemy
+python-dotenv
+requests
+psycopg2-binary
+Werkzeug
+gunicorn
+PyJWT
